care-australia-uat/force-app/main/default/objects/Stripe_Payment_Configs__mdt/Stripe_Payment_Configs__mdt.object-meta.xml
<CustomObject>
    <description>This metadata have the values of all the publish key and the domain required for the stripe payments.</description>
    <label>Stripe Payment Config</label>
    <pluralLabel>Stripe Payment Configs</pluralLabel>
</CustomObject>