care-australia-uat/force-app/main/default/objects/Stripe_Payment_Configs__mdt/fields/Allow_Apple_Pay__c.field-meta.xml
<CustomField>
    <fullName>Allow_Apple_Pay__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Apple Pay</label>
    <type>Checkbox</type>
</CustomField>