care-australia-uat/force-app/main/default/objects/Stripe_Payment_Configs__mdt/fields/Allow_Credit_Card__c.field-meta.xml
<CustomField>
    <fullName>Allow_Credit_Card__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Credit Card</label>
    <type>Checkbox</type>
</CustomField>