care-australia-uat/force-app/main/default/objects/Stripe_Payment_Configs__mdt/fields/Allow_Paypal__c.field-meta.xml
<CustomField>
    <fullName>Allow_Paypal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Paypal</label>
    <type>Checkbox</type>
</CustomField>