care-australia-uat/force-app/main/default/objects/Stripe_Payment_Configs__mdt/fields/Constant_Contact_Id__c.field-meta.xml
<CustomField>
    <fullName>Constant_Contact_Id__c</fullName>
    <description>Default contact to use for the payment of guest user</description>
    <label>Constant Contact Id</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>