care-australia-uat/force-app/main/default/objects/Stripe_Payment_Configs__mdt/fields/Donation_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Donation_Campaign__c</fullName>
    <label>Donation Campaign</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>