care-australia-uat/force-app/main/default/objects/Stripe_Payment_Configs__mdt/fields/Lend_With_Care_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Lend_With_Care_Campaign__c</fullName>
    <label>Lend With Care Campaign</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>