care-australia-uat/force-app/main/default/objects/Stripe_Payment_Configs__mdt/fields/LWC_domain__c.field-meta.xml
<CustomField>
    <fullName>LWC_domain__c</fullName>
    <label>LWC domain</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>