care-australia-uat/force-app/main/default/objects/Stripe_Payment_Configs__mdt/fields/Recurring_Donation_Sync_Time__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Donation_Sync_Time__c</fullName>
    <label>Recurring Donation Sync Time</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>