care-australia-uat/force-app/main/default/objects/Stripe_Payment_Configs__mdt/fields/Stripe_Publish_Key__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Publish_Key__c</fullName>
    <label>Stripe Publish Key</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>