care-australia-uat/force-app/main/default/objects/Stripe_Payment_Configs__mdt/fields/VF_page_domain__c.field-meta.xml
<CustomField>
    <fullName>VF_page_domain__c</fullName>
    <label>VF page domain</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>